feat: comment architecture rework